# DegorasProject

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  class_mainwindow.cpp  class_mainwindow.h  class_staticresidualsplot.cpp  class_staticresidualsplot.h  form_mainwindow.ui  interactivefilterwidget.cpp  interactivefilterwidget.h  interactivefilterwidget.ui  main.cpp
BD_DEGORAS/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CMakeUserPresets.json.example  SpaceObjectDBManager.cpp  SpaceObjectDBManager.h  addobjectdialog.cpp  addobjectdialog.h  addobjectdialog.ui  class_spaceobject.cpp  class_spaceobject.h  connectiondialog.cpp  connectiondialog.h  gridfsimagemanager.cpp  gridfsimagemanager.h  interface_plugin.cpp  interface_plugin.h  interface_spaceobjectsearchengine.h  json_helpers.cpp  json_helpers.h  loggersetup.cpp  loggersetup.h  logwidget.cpp  logwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pluginmanager.cpp  pluginmanager.h  qtlogsink.h
BD_DEGORAS/pluginsource/stdsearchengine/: CMakeLists.txt  stdsearchengine.cpp  stdsearchengine.h  stdsearchengine.json
DP_Core/: CMakeLists.txt  DP_Core.pro
DP_Core/include/: algorithms.h  datafilter.h  degoras_settings.h  dpcore_global.h  global_texts.h  global_utils.h  shortcutmanager.h  window_about_dialog.h  window_message_box.h
DP_Core/include/Tracking/: calibration.h  calibrationfilemanager.h  meteodata.h  tracking.h  trackingfilemanager.h
DP_Core/sources/: datafilter.cpp  degoras_settings.cpp  global_utils.cpp  shortcutmanager.cpp  window_about_dialog.cpp  window_message_box.cpp
DP_Core/sources/Tracking/: calibration.cpp  calibrationfilemanager.cpp  meteodata.cpp  tracking.cpp  trackingfilemanager.cpp
DP_Core/sources/forms/: filetablewidget.ui  form_about_dialog.ui  form_autoclosedialog.ui  form_plugins_abouts.ui  form_pluginssummary.ui  form_spaceobjectdisplaywidget.ui  passworddialog.ui
Filter_Tool/: CMakeLists.txt  Doxyfile  class_mainwindow.cpp  class_mainwindow.h  cpf.cpp  cpf.h  cpf_predictor.cpp  cpf_predictor.h  errorplot.cpp  errorplot.h  form_mainwindow.ui  histogramplot.cpp  histogramplot.h  main.cpp  plot.cpp  plot.h  qwt_slrplot_picker.cpp  qwt_slrplot_picker.h  tracking_data.cpp  tracking_data.h
cmake/: FindQwt.cmake
